1461-create-an-aermod-agent-that-retrieves-building-related-information-from-the-knowledge-graph: Updated method that writes input file for AERMET.